--- a/css/partials/_main.scss
+++ b/css/partials/_main.scss
@@ -4,7 +4,6 @@ main {
 
 .main__element {
 	width: 100%;
-	overflow: auto;
 	margin: 20px 0;
 	text-align: center;
 	
